refactor : 데이터베이스 조회 수정 (Projection)
* 변경사항
- (Projection) 데이터베이스 조회시 지정된 이름 사용시 변수가 Upper된 상태로 출력되는 현상 수정
(Projection 사용이유 : get함수 , 카멜케이스)